@@ -44,6 +44,8 @@
        asked if you want to save the changes on exit. (Stefan)
 
 Version 1.2.6
+- BUG: The status cache updated sometimes wrong paths or missed
+       updating correct ones. (Stefan)
 - BUG: Crash when the working copy contained copied files. (Stefan)
 - BUG: The add dialog showed already added files too. (Stefan)
 
